Add inspector subproject